--- a/index.html
+++ b/index.html
@@ -1,100 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-<!-- Primary Meta Tags --><title>Join Us free mod file</title><meta name="title" content="Join Us Free Mod File">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
-
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
-
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
-}
-
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
-}
-
-.container {
-  padding: 16px;
-}
-
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
-}
-</style>
-</head>
-<body>
-
-<h2>Login Form</h2>
-
-<form action="/action_page.php" method="post">
-  <div class="imgcontainer">
-    <img src="img_avatar2.png" alt="Avatar" class="avatar">
-  </div>
-
-  <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
-
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-        
-    <button type="submit">Login</button>
-    <label>
-      <input type="checkbox" checked="checked" name="remember"> Remember me
-    </label>
-  </div>
-
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
-  </div>
-</form>
-
-</body>
-</html>
+<html><head><!-- Primary Meta Tags --><title>Join Us Indian Hot girl </title><meta name="title" content="Join Us Indian Hot girl"><meta name="description" content="more girl wait for you!"> <!-- Open Graph / Facebook --><meta property="og:type" content="website"><meta property="og:url" content="https://metatags.io/"><meta property="og:title" content="Join Us Indian Hot girl"><meta property="og:description" content="More girl wait for you"><meta property="og:image" content="https://lh3.googleusercontent.com/-oqqYn5PeoC0/X49BBDjOExI/AAAAAAAAAEg/gh6Xi68eQcMU_-uPgtpForV7yBMy9LX9gCLcBGAsYHQ/chubby-desi-indian-aunty-private-images.jpg"> <!-- Twitter --><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="https://metatags.io/"><meta property="twitter:title" content="Join Us Indian Hot girl"><meta property="twitter:description" content="More girl wait for you!"><meta property="twitter:image" content="https://lh3.googleusercontent.com/-oqqYn5PeoC0/X49BBDjOExI/AAAAAAAAAEg/gh6Xi68eQcMU_-uPgtpForV7yBMy9LX9gCLcBGAsYHQ/chubby-desi-indian-aunty-private-images.jpg"> </head> <body>Plz Wait .....🐾🐾🐼🐼<script> location.replace("http://topexpertbd.blogspot.com/2021/01/master-movie-full-movie-download-hd.html") </script> </body> </html>
